[package]
name = "lisbon"
version = "0.1.0-dev"
edition = "2018"

[dependencies]
numpy = "0.14.1"
ndarray = "0.15.3"

[lib]
name = "lisbon"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.14.5"

[profile.release]
lto = true